Add gh-pages script

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "lint:fix": "prettier --check 'src/**/*' --write",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "echo 'No tests! :('"
+    "test": "echo 'No tests! :('",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
