--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "homepage": "https://fmilitao.github.io/sheety-writer/",
   "dependencies": {
-    "@material-ui/core": "^4.3.0",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "@types/crypto-js": "^3.1.43",
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-select": "^3.0.0",
-    "ajv": "^6.10.2",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-select": "^3.0.10",
+    "ajv": "^6.11.0",
     "crypto-js": "^3.1.9-1",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-select": "^3.0.4",
-    "typescript": "3.5.3"
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
+    "typescript": "^3.7.5"
   },
   "prettier": {
     "singleQuote": true,
